[project]
name = "uss-detect"
version = "0.1.0"
description = "Siemens USS Protocol Device Detection Tool - Automatically detects USS devices on serial bus and determines their configuration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyserial>=3.5",
    "rich>=14.2.0",
]
authors = [
    {name = "Oleksandr Kolodkin", email = "oleksandr.kolodkin@ukr.net"}
]
keywords = ["siemens", "uss", "serial", "modbus", "drive", "automation", "industrial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Software Development :: Embedded Systems",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/kolod/uss-detect"
Repository = "https://github.com/kolod/uss-detect"
Issues = "https://github.com/kolod/uss-detect/issues"

[project.scripts]
uss-detect = "uss_detect.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
